--- a/src/app/account/login/login.page.html
+++ b/src/app/account/login/login.page.html
@@ -36,6 +36,7 @@
 <br>
 <ion-button style="background-color: #EB4638; border-radius: 10px;" color="#EB4638" expand="block" mode="ios" (click)="googleLogin()"><ion-icon name="logo-google"></ion-icon>&nbsp;&nbsp;&nbsp;Connexion avec Google</ion-button>
 <ion-button style="background-color: #4862A3; border-radius: 10px;" color="#4862A3" expand="block" mode="ios" (click)="facebookLogin()"><ion-icon name="logo-facebook"></ion-icon>&nbsp;&nbsp;&nbsp;Connexion avec Facebook</ion-button>
+<ion-button style="background-color: #07080a; border-radius: 10px;" color="#4862A3" expand="block" mode="ios" (click)="loginApple()"><ion-icon name="logo-apple"></ion-icon>&nbsp;&nbsp;&nbsp;Connexion avec Apple</ion-button>
 
 <br>
 <ion-button fill="outline" expand="block" mode="ios" routerLink="/signup" routerDirection="forward">{{ text.login_signup }}</ion-button>
